--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "description": "",
   "main": "index.js",
   "type": "module",
+  "engines": {
+    "node": ">=14.20.1"
+  },
   "scripts": {
     "start": "nodemon index.js"
   },
-  "author": "Tejaswi Rayidi",
+  "author": "Varun Chandra",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -16,8 +19,9 @@
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.2.3",
+    "mongoose": "^7.4.1",
     "nodemon": "^2.0.22",
-    "razorpay": "^2.9.0"
+    "razorpay": "^2.9.0",
+    "uuid": "^9.0.0"
   }
 }
